@@ -73,13 +73,8 @@
       {% endfor %}
 
       <!-- Favicon -->
-      {% if config.site_favicon %}
-        <link rel="shortcut icon"
-            href="{{ base_url }}/{{ config.site_favicon }}">
-      {% else %}
-        <link rel="shortcut icon"
-            href="{{ base_url }}/assets/images/favicon.png">
-      {% endif %}
+      <link rel="shortcut icon"
+          href="{{ base_url }}/{{ config.theme.favicon }}">
 
       <!-- Generator banner -->
       <meta name="generator"
